replaced mysql with H2

--- a/example/src/main/webapp/css/index.css
+++ b/example/src/main/webapp/css/index.css
@@ -94,8 +94,8 @@ xmp {
     padding:0 10 0 10;
 }
 
-.rightcontainer button{
-	    display: block;
+.buttonstyle{
+	display: block;
     font-size: 1.17em;
     -webkit-margin-before: 1em;
     -webkit-margin-after: 1em;
