--- a/example/.settings/org.eclipse.wst.common.component
+++ b/example/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,7 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
         <dependent-module archiveName="kernel-1.0-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/kernel/kernel">
             <dependency-type>uses</dependency-type>
         </dependent-module>
