--- a/example/src/main/webapp/css/index.css
+++ b/example/src/main/webapp/css/index.css
@@ -37,11 +37,9 @@ ul.tab {
     background-color: #f1f1f1;
 }
 
-/* Float the list items side by side */
-ul.tab li {float: left;}
-
 /* Style the links inside the list items */
-ul.tab li a {
+ul.tab li {
+	float: left;
     display: inline-block;
     color: black;
     text-align: center;
@@ -52,14 +50,13 @@ ul.tab li a {
 }
 
 /* Change background color of links on hover */
-ul.tab li a:hover {background-color: #ddd;}
+ul.tab li:hover {background-color: #ddd;}
 
 /* Create an active/current tablink class */
-ul.tab li a:focus, .active {background-color: #ccc;}
+ul.tab li:focus, .active {background-color: #ccc;}
 
 /* Style the tab content */
 .tabcontent {
-    display: none;
     padding: 6px 12px;
     border: 1px solid #ccc;
     border-top: none;
@@ -105,6 +102,7 @@ xmp {
 }
 
 .buttonstyle{
+	width: 75px;
 	display: block;
     font-size: 1.17em;
     -webkit-margin-before: 1em;
@@ -112,4 +110,9 @@ xmp {
     -webkit-margin-start: 0px;
     -webkit-margin-end: 0px;
     font-weight: bold;
+}
+
+.binding{
+    font-size: 12;
+    white-space: pre;
 }
