--- a/AFE2016/.settings/org.eclipse.wst.common.component
+++ b/AFE2016/.settings/org.eclipse.wst.common.component
@@ -1,10 +1,12 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="AFE2016">
+<?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
+    <wb-module deploy-name="AFE2016-0.0.1-SNAPSHOT">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <dependent-module archiveName="kernel-1.1.2.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/kernel/kernel">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="java-output-path" value="/AFE2016/target/classes"/>
         <property name="context-root" value="AFE2016"/>
     </wb-module>
