--- a/ValidationTest/.settings/org.eclipse.wst.common.component
+++ b/ValidationTest/.settings/org.eclipse.wst.common.component
@@ -3,6 +3,9 @@
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <dependent-module archiveName="kernel-1.1.2.1.1.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/kernel/kernel">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="ValidationTest"/>
         <property name="java-output-path" value="/ValidationTest/target/classes"/>
     </wb-module>
