--- a/petclinic/.settings/org.eclipse.wst.common.component
+++ b/petclinic/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,9 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+        <dependent-module archiveName="kernel-1.1.2.1.1.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/kernel/kernel">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="java-output-path" value="/petclinic/target/classes"/>
         <property name="context-root" value="petclinic"/>
     </wb-module>
